--- a/charts/argo-cd/templates/argocd-application-controller/role.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/role.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: { { template "argo-cd.controller.fullname" . } }
-  namespace: { { include "argo-events.namespace" . | quote } }
+  namespace: { { include "argo-cd.namespace" . | quote } }
   labels:
     {
       {
