--- a/charts/argo-cd/templates/argocd-server/rolebinding.yaml
+++ b/charts/argo-cd/templates/argocd-server/rolebinding.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: { { include "argo-cd.server.fullname" . } }
-  namespace: { { include "argo-events.namespace" . | quote } }
+  namespace: { { include "argo-cd.namespace" . | quote } }
   labels:
     {
       {
@@ -16,4 +16,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: { { include "argo-cd.server.serviceAccountName" . } }
-    namespace: { { include "argo-events.namespace" . } }
+    namespace: { { include "argo-cd.namespace" . } }
