--- a/charts/argo-cd/templates/argocd-server/rolebinding.yaml
+++ b/charts/argo-cd/templates/argocd-server/rolebinding.yaml
@@ -1,15 +1,15 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
-metad 
+metadata:
   name: {{ include "argo-cd.server.fullname" . }}
   namespace: {{ include "argo-cd.namespace" . | quote }}
   labels:
-    {{- include "argo-cd.labels" (dict "context" . "component" .Values.server.name "name" .Values.server.name) | nindent 4 }}ata:
+    {{- include "argo-cd.labels" (dict "context" . "component" .Values.server.name "name" .Values.server.name) | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
   name: {{ template "argo-cd.server.fullname" . }}
 subjects:
-  - kind: ServiceAccount
-    name: {{ include "argo-cd.server.serviceAccountName" . }}
-    namespace: {{ include "argo-cd.namespace" . }}
+- kind: ServiceAccount
+  name: {{ include "argo-cd.server.serviceAccountName" . }}
+  namespace: {{ .Release.Namespace }}
