--- a/charts/argo-cd/ci/dynamic-sharding-values.yaml
+++ b/charts/argo-cd/ci/dynamic-sharding-values.yaml
@@ -4,3 +4,8 @@ crds:
 
 controller:
   dynamicClusterDistribution: true
+
+# these tests only support vanilla argo-cd
+# do not work for event reporter component
+eventReporter:
+  enabled: false
