Change url in values file for ArgoCD
Signed-off-by: ilia-medvedev-codefresh <ilia.medvedev@codefresh.io>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -1,5 +1,5 @@
 ## Argo CD configuration
-## Ref: https://github.com/argoproj/argo-cd
+## Ref: https://github.com/codefresh-io/argo-cd
 ##
 
 # -- Provide a name in place of `argocd`
