--- a/charts/argo-cd/templates/argocd-configs/argocd-notifications-cm.yaml
+++ b/charts/argo-cd/templates/argocd-configs/argocd-notifications-cm.yaml
@@ -15,14 +15,27 @@ data:
   {{- with .Values.notifications.notifiers }}
     {{- toYaml . | nindent 2 }}
   {{- end }}
-  {{- with .Values.notifications.subscriptions }}
   subscriptions: |
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+    {{- with .Values.notifications.subscriptions }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
+    {{- with .Values.cf-notifications.subscriptions }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
   {{- with .Values.notifications.templates }}
     {{- toYaml . | nindent 2 }}
   {{- end }}
   {{- with .Values.notifications.triggers }}
+    {{- toYaml . | nindent 2 }}
+  {{- end }}
+
+  {{- with .Values.cf-notifications.notifiers }}
+    {{- toYaml . | nindent 2 }}
+  {{- end }}
+  {{- with .Values.cf-notifications.templates }}
+    {{- toYaml . | nindent 2 }}
+  {{- end }}
+  {{- with .Values.cf-notifications.triggers }}
     {{- toYaml . | nindent 2 }}
   {{- end }}
 {{- end }}
