--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -3543,6 +3543,9 @@ notifications:
     # defaultTriggers: |
     #   - on-sync-status-unknown
 
+## Used by gitops-runtime-helm chart
+cfNotifications: {}
+
 eventReporter:
   # Enabled we need to skip argo-cd chart tests for this component
   enabled: true
