--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -3825,4 +3825,9 @@ eventReporter:
 
 codefresh:
   promotions:
-    notifications: {}
+    notifications:
+      context: {}
+      notifigers: {}
+      subscriptions: []
+      templates: {}
+      triggers: {}
