feat(argocd-image-updater): added default values for sign off and signing key
Signed-off-by: Dustin Lactin <dustin.lactin@gmail.com>

--- a/charts/argocd-image-updater/values.yaml
+++ b/charts/argocd-image-updater/values.yaml
@@ -130,6 +130,12 @@ config:
   # -- E-Mail address to use for Git commits
   gitCommitMail: ""
 
+  # -- Path to public SSH key mounted in container, or GPG key ID used to sign commits
+  gitCommitSigningKey: ""
+
+  # -- Enables sign off on commits
+  gitCommitSignOff: false
+
   # -- Changing the Git commit message
   gitCommitTemplate: ""
 
