--- a/charts/argo-cd/templates/argocd-repo-server/service.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/service.yaml
@@ -13,7 +13,7 @@ metadata:
 {{- toYaml . | nindent 4 }}
 {{- end }}
   name: {{ template "argo-cd.repoServer.fullname" . }}
-  namespace: {{ include "argo-cd.namespace" . | quote }}
+  namespace: {{ include  "argo-cd.namespace" . }}
 spec:
   ports:
   - name: {{ .Values.repoServer.service.portName }}
