--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -26,9 +26,5 @@ annotations:
     fingerprint: 2B8F22F57260EFA67BE1C5824B11F800CD9D2252
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
-    - kind: fixed
-      description: Service option externalIPs is available for all service types
-    - kind: fixed
-      description: Service option externalTrafficPolicy is available only for Service types LoadBalancer and NodePort
-    - kind: fixed
-      description: Load balancer options are available only for Service type LoadBalancer
+    - kind: added
+      description: Support ability to set .Values.namespaceOverride
