docs: Add changelog description
Signed-off-by: vitor.cassiano <vitor.cassiano@picpay.com>

--- a/charts/argo-rollouts/Chart.yaml
+++ b/charts/argo-rollouts/Chart.yaml
@@ -19,4 +19,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: added
-      description: Added pod labels for the controller and the dashboard components
+      description: Added new resource HPA for autoscaling the rollout controller
