--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -95,6 +95,13 @@ global:
   #   hostnames:
   #   - git.myhostname
 
+  # Configure dual-stack used by all component services
+  dualStack:
+    # -- IP family policy to configure dual-stack see [Configure dual-stack](https://kubernetes.io/docs/concepts/services-networking/dual-stack/#services)
+    ipFamilyPolicy: ""
+    # -- IP families that should be supported and the order in which they should be applied to ClusterIP as well. Can be IPv4 and/or IPv6.
+    ipFamilies: []
+
   # Default network policy rules used by all components
   networkPolicy:
     # -- Create NetworkPolicy objects for all components
@@ -799,10 +806,6 @@ controller:
       type: ClusterIP
       # -- Metrics service clusterIP. `None` makes a "headless service" (no virtual IP)
       clusterIP: ""
-      # -- Metrics service ip family policy to configure dual-stack see [Configure dual-stack](https://kubernetes.io/docs/concepts/services-networking/dual-stack/#services)
-      ipFamilyPolicy: ""
-      # -- Metrics service ip families that should be supported and the order in which they should be applied to ClusterIP as well. Can be IPv4 and/or IPv6.
-      ipFamilies: []
       # -- Metrics service annotations
       annotations: {}
       # -- Metrics service labels
@@ -1130,10 +1133,6 @@ dex:
     # -- Automount API credentials for the Service Account
     automountServiceAccountToken: true
 
-  # -- Service ip family policy to configure dual-stack see [Configure dual-stack](https://kubernetes.io/docs/concepts/services-networking/dual-stack/#services)
-  serviceIpFamilyPolicy: ""
-  # -- Service ip families that should be supported and the order in which they should be applied to ClusterIP as well. Can be IPv4 and/or IPv6.
-  serviceIpFamilies: []
   # -- Service port for HTTP access
   servicePortHttp: 5556
   # -- Service port name for HTTP access
@@ -1393,10 +1392,6 @@ redis:
       drop:
       - ALL
 
-  # -- Redis service ip family policy to configure dual-stack see [Configure dual-stack](https://kubernetes.io/docs/concepts/services-networking/dual-stack/#services)
-  serviceIpFamilyPolicy: ""
-  # -- Redis service ip families that should be supported and the order in which they should be applied to ClusterIP as well. Can be IPv4 and/or IPv6.
-  serviceIpFamilies: []
   # -- Redis service port
   servicePort: 6379
 
@@ -1962,10 +1957,6 @@ server:
     labels: {}
     # -- Server service type
     type: ClusterIP
-    # -- Server service ip family policy to configure dual-stack see [Configure dual-stack](https://kubernetes.io/docs/concepts/services-networking/dual-stack/#services)
-    ipFamilyPolicy: ""
-    # -- Server service ip families that should be supported and the order in which they should be applied to ClusterIP as well. Can be IPv4 and/or IPv6.
-    ipFamilies: []
     # -- Server service http port for NodePort service type (only if `server.service.type` is set to "NodePort")
     nodePortHttp: 30080
     # -- Server service https port for NodePort service type (only if `server.service.type` is set to "NodePort")
@@ -2000,10 +1991,6 @@ server:
       type: ClusterIP
       # -- Metrics service clusterIP. `None` makes a "headless service" (no virtual IP)
       clusterIP: ""
-      # -- Metrics service ip family policy to configure dual-stack see [Configure dual-stack](https://kubernetes.io/docs/concepts/services-networking/dual-stack/#services)
-      ipFamilyPolicy: ""
-      # -- Metrics service ip families that should be supported and the order in which they should be applied to ClusterIP as well. Can be IPv4 and/or IPv6.
-      ipFamilies: []
       # -- Metrics service annotations
       annotations: {}
       # -- Metrics service labels
@@ -2561,10 +2548,6 @@ repoServer:
     annotations: {}
     # -- Repo server service labels
     labels: {}
-    # -- Repo server service ip family policy to configure dual-stack see [Configure dual-stack](https://kubernetes.io/docs/concepts/services-networking/dual-stack/#services)
-    ipFamilyPolicy: ""
-    # -- Repo server service ip families that should be supported and the order in which they should be applied to ClusterIP as well. Can be IPv4 and/or IPv6.
-    ipFamilies: []
     # -- Repo server service port
     port: 8081
     # -- Repo server service port name
@@ -2579,10 +2562,6 @@ repoServer:
       type: ClusterIP
       # -- Metrics service clusterIP. `None` makes a "headless service" (no virtual IP)
       clusterIP: ""
-      # -- Metrics service ip family policy to configure dual-stack see [Configure dual-stack](https://kubernetes.io/docs/concepts/services-networking/dual-stack/#services)
-      ipFamilyPolicy: ""
-      # -- Metrics service ip families that should be supported and the order in which they should be applied to ClusterIP as well. Can be IPv4 and/or IPv6.
-      ipFamilies: []
       # -- Metrics service annotations
       annotations: {}
       # -- Metrics service labels
@@ -2743,10 +2722,6 @@ applicationSet:
       type: ClusterIP
       # -- Metrics service clusterIP. `None` makes a "headless service" (no virtual IP)
       clusterIP: ""
-      # -- Metrics service ip family policy to configure dual-stack see [Configure dual-stack](https://kubernetes.io/docs/concepts/services-networking/dual-stack/#services)
-      ipFamilyPolicy: ""
-      # -- Metrics service ip families that should be supported and the order in which they should be applied to ClusterIP as well. Can be IPv4 and/or IPv6.
-      ipFamilies: []
       # -- Metrics service annotations
       annotations: {}
       # -- Metrics service labels
@@ -2789,10 +2764,6 @@ applicationSet:
     labels: {}
     # -- ApplicationSet service type
     type: ClusterIP
-    # -- ApplicationSet service ip family policy to configure dual-stack see [Configure dual-stack](https://kubernetes.io/docs/concepts/services-networking/dual-stack/#services)
-    ipFamilyPolicy: ""
-    # -- ApplicationSet service ip families that should be supported and the order in which they should be applied to ClusterIP as well. Can be IPv4 and/or IPv6.
-    ipFamilies: []
     # -- ApplicationSet service port
     port: 7000
     # -- ApplicationSet service port name
@@ -3155,10 +3126,6 @@ notifications:
       type: ClusterIP
       # -- Metrics service clusterIP. `None` makes a "headless service" (no virtual IP)
       clusterIP: ""
-      # -- Metrics service ip family policy to configure dual-stack see [Configure dual-stack](https://kubernetes.io/docs/concepts/services-networking/dual-stack/#services)
-      ipFamilyPolicy: ""
-      # -- Metrics service ip families that should be supported and the order in which they should be applied to ClusterIP as well. Can be IPv4 and/or IPv6.
-      ipFamilies: []
       # -- Metrics service annotations
       annotations: {}
       # -- Metrics service labels
