docs(argo-cd): Add changelog line for v2.11.1
Signed-off-by: Marco Maurer <mkilchhofer@users.noreply.github.com>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -28,3 +28,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: security
       description: Enable Redis authentication in the default installation (GHSA-9766-5277-j5hr)
+    - kind: changed
+      description: Bump argo-cd to v2.11.1
