feat(argo-rollouts): Support revisionHistoryLimit
Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-rollouts/values.yaml
+++ b/charts/argo-rollouts/values.yaml
@@ -90,6 +90,8 @@ controller:
     tag: ""
     # -- Image pull policy
     pullPolicy: IfNotPresent
+  # -- The number of revisions to keep
+  revisionHistoryLimit: 10
 
   # -- Additional command line arguments to pass to rollouts-controller.  A list of flags.
   extraArgs: []
@@ -336,6 +338,8 @@ dashboard:
     tag: ""
     # -- Image pull policy
     pullPolicy: IfNotPresent
+  # -- The number of revisions to keep
+  revisionHistoryLimit: 10
   # -- Additional command line arguments to pass to rollouts-dashboard. A list of flags.
   extraArgs: []
   # -- Additional environment variables for rollouts-dashboard. A list of name/value maps.
