--- a/charts/argo-rollouts/templates/dashboard/deployment.yaml
+++ b/charts/argo-rollouts/templates/dashboard/deployment.yaml
@@ -24,6 +24,7 @@ spec:
   strategy:
     type: Recreate
   replicas: {{ .Values.dashboard.replicas }}
+  revisionHistoryLimit: {{ .Values.dashboard.revisionHistoryLimit }}
   template:
     metadata:
       {{- with (mergeOverwrite (deepCopy .Values.podAnnotations) .Values.dashboard.podAnnotations) }}
