feat(argo-rollouts): Support revisionHistoryLimit (#2712)
* feat(argo-rollouts): Support revisionHistoryLimit

Signed-off-by: yu-croco <yu.croco@gmail.com>

* chore(argo-rollouts): Align to argo-cd's configuration

Signed-off-by: yu-croco <yu.croco@gmail.com>

---------

Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-rollouts/templates/controller/deployment.yaml
+++ b/charts/argo-rollouts/templates/controller/deployment.yaml
@@ -23,6 +23,7 @@ spec:
   strategy:
     type: Recreate
   replicas: {{ .Values.controller.replicas }}
+  revisionHistoryLimit: {{ .Values.global.revisionHistoryLimit }}
   template:
     metadata:
       {{- with (mergeOverwrite (deepCopy .Values.podAnnotations) .Values.controller.podAnnotations) }}
