feat(argo-cd): add support for dual stack clusters (#2649)
* feat(argo-cd): add support for dual stack clusters

Signed-off-by: Ludovic Ortega <ludovic.ortega@adminafk.fr>

* fix: add suggested change

Signed-off-by: Ludovic Ortega <ludovic.ortega@adminafk.fr>

* fix: metric template & add suggested change

Signed-off-by: Ludovic Ortega <ludovic.ortega@adminafk.fr>

* fix: remove changelog in README.md.gotmpl

Signed-off-by: Ludovic Ortega <ludovic.ortega@adminafk.fr>

* fix: applicationset metric template

Signed-off-by: Ludovic Ortega <ludovic.ortega@adminafk.fr>

* fix: add changelog as annotation

Signed-off-by: Ludovic Ortega <ludovic.ortega@adminafk.fr>

* feat: use a global setting to enable dual stack

Signed-off-by: Ludovic Ortega <ludovic.ortega@adminafk.fr>

---------

Signed-off-by: Ludovic Ortega <ludovic.ortega@adminafk.fr>
Signed-off-by: Marco Maurer (-Kilchhofer) <mkilchhofer@users.noreply.github.com>
Co-authored-by: Aikawa <yu.croco@gmail.com>
Co-authored-by: Marco Maurer (-Kilchhofer) <mkilchhofer@users.noreply.github.com>

--- a/charts/argo-cd/templates/argocd-notifications/metrics.yaml
+++ b/charts/argo-cd/templates/argocd-notifications/metrics.yaml
@@ -24,6 +24,7 @@ spec:
   {{- if and .Values.notifications.metrics.service.clusterIP (eq .Values.notifications.metrics.service.type "ClusterIP") }}
   clusterIP: {{ .Values.notifications.metrics.service.clusterIP }}
   {{- end }}
+  {{- include "argo-cd.dualStack" . | indent 2 }}
   selector:
     {{- include "argo-cd.selectorLabels" (dict "context" . "name" .Values.notifications.name) | nindent 6 }}
   ports:
