--- a/charts/argo-cd/templates/argocd-server/service.yaml
+++ b/charts/argo-cd/templates/argocd-server/service.yaml
@@ -16,6 +16,7 @@ metadata:
   {{- end }}
 spec:
   type: {{ .Values.server.service.type }}
+  {{- include "argo-cd.dualStack" . | indent 2 }}
   {{- with .Values.server.service.externalIPs }}
   externalIPs: {{ . }}
   {{- end }}
