Apply suggestions from code review
Signed-off-by: Marco Maurer (-Kilchhofer) <mkilchhofer@users.noreply.github.com>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -27,6 +27,6 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: removed
-      description: Remove server.certificate.serverName, as the expected secret name is static (argocd-server-tls)
+      description: Remove `server.certificate.secretName`, as the expected secret name is static (argocd-server-tls)
     - kind: removed
-      description: Remove applicationSet.certificate.serverName, as the expected secret name is static (argocd-applicationset-controller-tls)
+      description: Remove `applicationSet.certificate.secretName`, as the expected secret name is static (argocd-applicationset-controller-tls)
